--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,21 @@
-<!doctype html>
-<html lang="fa">
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="fa">
+<!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <title>What is CE?</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>#کامپیوترنخون</title>
   <base href="/">
-
+  <meta name="description" content="#کامپیوترنخون کمپینی است برای آگاه‌سازی افراد نسبت به رشته کامپیوتر!">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="text-center">
+  <!--TODO: Fancy Preloader!-->
   <app-root>Loading...</app-root>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
