--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,10 @@
 </head>
 <body class="text-center">
   <!--TODO: Fancy Preloader!-->
-  <app-root>Loading...</app-root>
+  <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+    <app-root>Loading...</app-root>
+  </div>
+
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
